[package]
name = "missed-connections-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros"]

